# app/http/module/qa/api_answer_delete.go
@@ -2,6 +2,15 @@ package qa
 
 import "github.com/gohade/hade/framework/gin"
 
+// AnswerDelete 代表删除回答
+// @Summary 创建回答
+// @Description 创建回答
+// @Accept json
+// @Procude json
+// @Tags qa
+// @Param id query int true "删除id"
+// @Success 200 string Msg "操作成功"
+// @Router /answer/delete [get]
 func (api *QAApi) AnswerDelete(c *gin.Context) {
 
 }
